--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,11 @@
+executables/acquagame.zip filter=lfs diff=lfs merge=lfs -text
+executables/Acqua-Game.pck filter=lfs diff=lfs merge=lfs -text
+executables/icon filter=lfs diff=lfs merge=lfs -text
+executables/jogo-agua.pck filter=lfs diff=lfs merge=lfs -text
+executables/jogo-agua.sh filter=lfs diff=lfs merge=lfs -text
+executables/jogo-agua.x86_64 filter=lfs diff=lfs merge=lfs -text
+executables/Acqua-Game.console.exe filter=lfs diff=lfs merge=lfs -text
+executables/Acqua-Game.exe filter=lfs diff=lfs merge=lfs -text
+android/acquagame.apk filter=lfs diff=lfs merge=lfs -text
 executables/* filter=lfs diff=lfs merge=lfs -text
 Acqua-Game.side.wasm filter=lfs diff=lfs merge=lfs -text
-android/acquagame.apk filter=lfs diff=lfs merge=lfs -text
