--- a/.godot/export_credentials.cfg
+++ b/.godot/export_credentials.cfg
@@ -28,3 +28,18 @@ codesign/password=""
 [preset.3]
 
 script_encryption_key=""
+
+[preset.4]
+
+script_encryption_key=""
+
+[preset.4.options]
+
+codesign/certificate_file=""
+codesign/certificate_password=""
+codesign/provisioning_profile=""
+notarization/apple_id_name=""
+notarization/apple_id_password=""
+notarization/api_uuid=""
+notarization/api_key=""
+notarization/api_key_id=""
