--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,9 +37,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=true
 package/show_in_app_library=true
 package/show_as_launcher_app=true
-launcher_icons/main_192x192="res://img/capybara-ismael.png"
-launcher_icons/adaptive_foreground_432x432="res://img/capybara-ismael.png"
-launcher_icons/adaptive_background_432x432="res://img/capybara-ismael.png"
+launcher_icons/main_192x192="res://img/cenario/sebo/capybara.png"
+launcher_icons/adaptive_foreground_432x432="res://img/cenario/sebo/capybara.png"
+launcher_icons/adaptive_background_432x432="res://img/cenario/sebo/capybara.png"
 graphics/opengl_debug=true
 xr_features/xr_mode=0
 screen/immersive_mode=true
@@ -371,7 +371,7 @@ application/signature=""
 application/app_category="Games"
 application/short_version=""
 application/version=""
-application/copyright=""
+application/copyright="sddddddddddddddd"
 application/copyright_localized={}
 application/min_macos_version="10.12"
 application/export_angle=0
