--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -42,9 +42,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=true
 package/show_in_app_library=true
 package/show_as_launcher_app=true
-launcher_icons/main_192x192="res://img/cenario/sebo/capybara.png"
-launcher_icons/adaptive_foreground_432x432="res://img/cenario/sebo/capybara.png"
-launcher_icons/adaptive_background_432x432="res://img/cenario/sebo/capybara.png"
+launcher_icons/main_192x192="res://Acqua-Game.icon.png"
+launcher_icons/adaptive_foreground_432x432="res://Acqua-Game.512x512.png"
+launcher_icons/adaptive_background_432x432="res://Acqua-Game.512x512.png"
 graphics/opengl_debug=true
 xr_features/xr_mode=0
 screen/immersive_mode=true
@@ -119,8 +119,8 @@ permissions/get_tasks=false
 permissions/get_top_activity_info=false
 permissions/global_search=false
 permissions/hardware_test=false
-permissions/inject_events=true
-permissions/install_location_provider=true
+permissions/inject_events=false
+permissions/install_location_provider=false
 permissions/install_packages=true
 permissions/install_shortcut=true
 permissions/internal_system_window=false
