--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -638,13 +638,13 @@ gradle_build/gradle_build_directory=""
 gradle_build/android_source_template=""
 gradle_build/compress_native_libraries=false
 gradle_build/export_format=1
-gradle_build/min_sdk="34"
+gradle_build/min_sdk="24"
 gradle_build/target_sdk="34"
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=9
+version/code=12
 version/name=""
 package/unique_name="acqua.game"
 package/name="acquagame"
@@ -655,9 +655,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=true
 package/show_in_app_library=true
 package/show_as_launcher_app=true
-launcher_icons/main_192x192="res://img/cenario/sebo/capybara.png"
-launcher_icons/adaptive_foreground_432x432="res://img/cenario/sebo/capybara.png"
-launcher_icons/adaptive_background_432x432="res://img/cenario/sebo/capybara.png"
+launcher_icons/main_192x192="res://Acqua-Game.180x180.png"
+launcher_icons/adaptive_foreground_432x432="res://Acqua-Game.512x512.png"
+launcher_icons/adaptive_background_432x432="res://Acqua-Game.512x512.png"
 graphics/opengl_debug=true
 xr_features/xr_mode=0
 screen/immersive_mode=true
